Small error correction on mobile devices (on landing page).

--- a/body-style.css
+++ b/body-style.css
@@ -26,6 +26,10 @@ body {
     align-items: center;
     justify-content: space-around;
 }
+
+.error-class {
+    color: white;
+}
 /***************** End General Pages *****************/
 
 
@@ -63,7 +67,7 @@ body {
 }
 
 @media screen and (max-width: 820px) {
-    .main-landing {
+    .main-page-content {
         flex-direction: column;
     }
 
